# orbit-ai-framework

./: .cruft.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/: .github.env
.github/workflows/: build.yml  checks.yml  claude-pr-review.yml  cruft-update.yml  pre-commit.yml  release.yml
alembic/: README.md  env.py
alembic/versions/: 2754babc9066_.py
backend/: Dockerfile  main.py
backend/api/: routes.py
backend/tests/: test_backend.py
backend/utils/database/: auth.py
frontend/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  styles.css
frontend/app/generic-error/: page.tsx
frontend/app/unauthorised/: page.tsx
frontend/pages/api/: health.ts  info.ts  item.ts
frontend/utils/: api.ts  auth.ts  backend.ts  header.ts
shared_utils/: auth.py  exceptions.py  settings.py
shared_utils/database/: postgres_database.py  postgres_interface.py  postgres_models.py  pydantic_schemas.py
terraform/: acm.tf  data.tf  diagram_script.py  ecs.tf  load_balancer.tf  provider.tf  rds.tf  secrets.tf  variables.tf
terraform/variables/: dev.tfvars  global.tfvars  preprod.tfvars  prod.tfvars
