[tool.ruff]
line-length = 120
target-version = 'py312'
exclude = ["terraform/diagram_script.py", "aws_architecture.jpg"]

[tool.cruft]
skip = [
    
    # fastapi_paths
    "backend/fastapi/settings.py",
    "backend/fastapi/tests.py",
    
    # nextjs_paths
    "frontend/nextjs/pages/api/health.ts",
    "frontend/nextjs/pages/api/info.ts",
    "frontend/nextjs/app/globals.css",
    "frontend/nextjs/app/favicon.ico",
    "frontend/nextjs/app/layout.tsx",
    "frontend/nextjs/app/page.tsx",
    # general_paths
    ".env.*",
    ".github/.github.env",
    ".github/workflows",
    "data",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra -q"
testpaths = [
    "frontend/streamlit/tests",
    "backend/fastapi/tests"
]

[project]
name = "orbit"
version = "0.1.0"
description = ""
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "i.AI", email = "i-dot-ai-enquiries@cabinetoffice.gov.uk"}]
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.112.0",
    "sqlalchemy>=2.0.32",
    "decorator>=5.1.1",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.3",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.31.0",
    "pyjwt>=2.9.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "python-keycloak>=4.7.3",
    "i-dot-ai-utilities>=0.3.0",
]



[dependency-groups]
dev = [
    "bumpversion>=0.6.0",
    "pytest>=8.3.2",
    "pytest-env>=1.1.1",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.6",
    "bandit>=1.7.9",
    "detect-secrets>=1.5.0",
    "playwright>=1.45",
    "pytest-playwright>=0.5",
    "diagrams>=0.23.4",
    "httpx==0.27.2",
]

[tool.ruff.format]
exclude = ["data/*"]

[tool.ruff.lint]
# Dribble in those we have commented out, asterisked ones first
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ARG",
    "ASYNC",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "EXE",
    "FURB",
    "ICN",
    "INT",
    "ISC",
    "LOG",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
exclude = ["out/*"]
ignore = ["COM812", "DJ001", "RET505", "RET508", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003", "S311"]
"*/tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003"]
"*/tests_playwright/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003"]
